# ProjetTSP

./: .gitignore  CMakeLists.txt  City.cpp  City.h  File.cpp  File.h  Greedy.cpp  Greedy.h  README.md  Random.cpp  Random.h  ScoreUtils.cpp  ScoreUtils.h  Solution.cpp  Solution.h  main.cpp  scoreUtils.cpp  scoreUtils.h
Solutions/: Exchange.cpp  Exchange.h  Greedy.cpp  Greedy.h  LocalSearch.cpp  LocalSearch.h  Random.cpp  Random.h  Reinsertion.cpp  Reinsertion.h  Solution.cpp  Solution.h  TwoOpt.cpp  TwoOpt.h
Solutions/Strategies/: Exchange.cpp  Exchange.h  NeighborStart.cpp  NeighborStart.h  Reinsertion.cpp  Reinsertion.h  TwoOpt.cpp  TwoOpt.h
